# vdm

./: README.md  pyproject.toml
docs/: how_to.md
graphql/: schema.graphql
pyIDL/: pyproject.toml  spec.py
pyIDL/schema/: component.py  namespace.py  unit.py
pyIDL/spec/: brake.py  hierarchy_model.py  tire.py  units.py
resources/vss-migrated/modular-flat/modular_spec/domain/: Vehicle_Adas.graphql  Vehicle_Adas_Esc_RoadFriction.graphql  Vehicle_Adas_SupportedAutonomyLevel_Enum.graphql  Vehicle_Adas_Tcs.graphql  Vehicle_Body.graphql  Vehicle_Body_Lights.graphql  Vehicle_Body_Lights_Fog.graphql  (+40 more)
spec/2025-09-10/: vdm.graphql
spec/ChargingSession/: ChargingSessionStatus.graphql  _ChargingSession.graphql
spec/ChargingStation/: ChargePoint.graphql  Connector.graphql  ParkingType.graphql  PricingInfo.graphql  _ChargingStation.graphql
spec/CommonTypes/: Address.graphql  GeographicCoordinates.graphql  Location.graphql
spec/Other/: custom_scalars.graphql
spec/Person/: Gender.graphql  PersonName.graphql  _Person.graphql
spec/Vehicle/domain/Vehicle/: Driver.graphql
spec/Vehicle/instances/: Vehicle_Body_Mirrors_InstanceTag.graphql  Vehicle_Cabin_Light_AmbientLight_InstanceTag.graphql  Vehicle_Chassis_Axle_InstanceTag.graphql  Vehicle_MotionManagement_Steering_Axle_InstanceTag.graphql
spec/Vehicle/other/: directives.graphql  units.graphql
spec/common/: directives.graphql
spec/vss/2025-09-17/modular-flat/: full_sdl_schema.graphql
vss-evo/: README.md
vss-evo/hierarchy/: hierarchy_model.yaml
vss-evo/spec/: Wheel.yaml  adas.yaml  units.yaml
(+181 files in other folders)
